<resources>
    <string name="app_name">MyApp</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="register_allcaps">REGISTER</string>
    <string name="confirm">confirm</string>
    <string name="logo_chat">Logo chat</string>
    <string name="logout">Logout</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_massage_here">Type massage here</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="profile">Profile</string>
    <string name="no_msg">No message!</string>
</resources>
