<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".StartActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".94" />

    <ImageView
        android:id="@+id/imageView_login_logo"
        android:layout_width="274dp"
        android:layout_height="232dp"
        android:src="@drawable/finallogo"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_chat" />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/etext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16sp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_login_right"
        app:layout_constraintStart_toStartOf="@id/guideline_login_left"
        app:layout_constraintTop_toBottomOf="@+id/imageView_login_logo"/>

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/etext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16sp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintStart_toStartOf="@id/guideline_login_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_email"/>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_bg"
        android:text="@string/register"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_left" />

    <View
        android:id="@+id/View_Login_Line1"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_register"
        app:layout_constraintEnd_toStartOf="@+id/textView_or_UI"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
        app:layout_constraintVertical_bias=".5" />

    <View
        android:id="@+id/view_Login_Line2"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_register"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/textView_or_UI"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView_or_UI"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_register"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />


</androidx.constraintlayout.widget.ConstraintLayout>