<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_register_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_register_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".94" />


    <EditText
        android:id="@+id/edt_register_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/etext_bg"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16sp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_register_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_register_left"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edt_register_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/etext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16sp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_register_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_register_left"
        app:layout_constraintTop_toBottomOf="@id/edt_register_username" />

    <EditText
        android:id="@+id/edt_register_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/etext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16sp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@+id/guideline_register_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_register_left"
        app:layout_constraintTop_toBottomOf="@id/edt_register_email" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_bg"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@+id/guideline_register_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_register_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />


</androidx.constraintlayout.widget.ConstraintLayout>